fixed often computer player crash when playing with Corn Circles
(may fixes similar situation on other expansions)